multirobot waypoint worls

--- a/src/kobu_control/CMakeLists.txt
+++ b/src/kobu_control/CMakeLists.txt
@@ -21,7 +21,6 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
 	FILES
 	MoveDistance.srv
-	SampleNeighbours.srv
 )
 
 generate_messages(
@@ -188,10 +187,10 @@ add_dependencies(move_distance_client kobu_control_gencpp)
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+catkin_install_python(PROGRAMS
+  scripts/curve_follow.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
